# pap-engine

./: CMakeLists.txt
src/camera/: camera.cpp  camera.hpp
src/core/: time.cpp  time.hpp
src/engine/: mesin_engine.cpp  mesin_engine.hpp
src/rendering/: renderer.cpp
src/sistem/: input.cpp  input.hpp  window.cpp
